# NeoPresence

./: .gitignore  CMakeLists.txt  README.md  plugin.lua
plugin/: neovim-discord-presence.lua
src/: main.cpp
